sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [accessPolicyAssignmentCreateUpdateSample.js][accesspolicyassignmentcreateupdatesample]     | Creates/Updates a particular access policy assignment for a database x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseAccessPolicyAssignmentCreateUpdate.json                                                                                                                                                                                        |
| [accessPolicyAssignmentDeleteSample.js][accesspolicyassignmentdeletesample]                 | Deletes a single access policy assignment. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseAccessPolicyAssignmentDelete.json                                                                                                                                                                                                                        |
| [accessPolicyAssignmentGetSample.js][accesspolicyassignmentgetsample]                       | Gets information about access policy assignment for database. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseAccessPolicyAssignmentGet.json                                                                                                                                                                                                        |
| [accessPolicyAssignmentListSample.js][accesspolicyassignmentlistsample]                     | Gets all access policy assignments.. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseAccessPolicyAssignmentsList.json                                                                                                                                                                                                                               |
| [databasesCreateSample.js][databasescreatesample]                                           | Creates a database x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesCreate.json                                                                                                                                                                                                                                                             |
| [databasesDeleteSample.js][databasesdeletesample]                                           | Deletes a single database x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesDelete.json                                                                                                                                                                                                                                                      |
| [databasesExportSample.js][databasesexportsample]                                           | Exports a database file from target database. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesExport.json                                                                                                                                                                                                                                  |
| [databasesFlushSample.js][databasesflushsample]                                             | Flushes all the keys in this database and also from its linked databases. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesFlush.json                                                                                                                                                                                                       |
| [databasesForceLinkToReplicationGroupSample.js][databasesforcelinktoreplicationgroupsample] | Forcibly recreates an existing database on the specified cluster, and rejoins it to an existing replication group. **IMPORTANT NOTE:** All data in this database will be discarded, and the database will temporarily be unavailable while rejoining the replication group. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesForceLink.json |
| [databasesForceUnlinkSample.js][databasesforceunlinksample]                                 | Forcibly removes the link to the specified database resource. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesForceUnlink.json                                                                                                                                                                                                             |
| [databasesGetSample.js][databasesgetsample]                                                 | Gets information about a database in a Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesGet.json                                                                                                                                                                                                                  |
| [databasesImportSample.js][databasesimportsample]                                           | Imports database files to target database. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesImport.json                                                                                                                                                                                                                                     |
| [databasesListByClusterSample.js][databaseslistbyclustersample]                             | Gets all databases in the specified Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesListByCluster.json                                                                                                                                                                                                           |
| [databasesListKeysSample.js][databaseslistkeyssample]                                       | Retrieves the access keys for the Redis Enterprise database. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesListKeys.json                                                                                                                                                                                                                 |
| [databasesRegenerateKeySample.js][databasesregeneratekeysample]                             | Regenerates the Redis Enterprise database's access keys. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesRegenerateKey.json                                                                                                                                                                                                                |
| [databasesUpdateSample.js][databasesupdatesample]                                           | Updates a database x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesUpdate.json                                                                                                                                                                                                                                                             |
| [databasesUpgradeDbRedisVersionSample.js][databasesupgradedbredisversionsample]             | Upgrades the database Redis version to the latest available. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDatabasesUpgradeDBRedisVersion.json                                                                                                                                                                                                    |
| [operationsListSample.js][operationslistsample]                                             | Lists all of the available REST API operations of the Microsoft.Cache provider. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/OperationsList.json                                                                                                                                                                                                                |
| [operationsStatusGetSample.js][operationsstatusgetsample]                                   | Gets the status of operation. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/OperationsStatusGet.json                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]         | Deletes the specified private endpoint connection associated with the Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDeletePrivateEndpointConnection.json                                                                                                                                                                |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]               | Gets the specified private endpoint connection associated with the Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseGetPrivateEndpointConnection.json                                                                                                                                                                      |
| [privateEndpointConnectionsListSample.js][privateendpointconnectionslistsample]             | Lists all the private endpoint connections associated with the Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseListPrivateEndpointConnections.json                                                                                                                                                                        |
| [privateEndpointConnectionsPutSample.js][privateendpointconnectionsputsample]               | Updates the state of the specified private endpoint connection associated with the Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterprisePutPrivateEndpointConnection.json                                                                                                                                                      |
| [privateLinkResourcesListByClusterSample.js][privatelinkresourceslistbyclustersample]       | Gets the private link resources that need to be created for a Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseListPrivateLinkResources.json                                                                                                                                                                               |
| [redisEnterpriseCreateSample.js][redisenterprisecreatesample]                               | Creates or updates an existing (overwrite/recreate, with potential downtime) cache cluster x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseCreate.json                                                                                                                                                                                              |
| [redisEnterpriseDeleteSample.js][redisenterprisedeletesample]                               | Deletes a Redis Enterprise cache cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseDelete.json                                                                                                                                                                                                                                               |
| [redisEnterpriseGetSample.js][redisenterprisegetsample]                                     | Gets information about a Redis Enterprise cluster x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseGet.json                                                                                                                                                                                                                                          |
| [redisEnterpriseListByResourceGroupSample.js][redisenterpriselistbyresourcegroupsample]     | Lists all Redis Enterprise clusters in a resource group. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseListByResourceGroup.json                                                                                                                                                                                                                   |
| [redisEnterpriseListSample.js][redisenterpriselistsample]                                   | Lists all Redis Enterprise clusters in the specified subscription. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseList.json                                                                                                                                                                                                                        |
| [redisEnterpriseListSkusForScalingSample.js][redisenterpriselistskusforscalingsample]       | Lists the available SKUs for scaling the Redis Enterprise cluster. x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseListSkusForScaling.json                                                                                                                                                                                                          |
| [redisEnterpriseUpdateSample.js][redisenterpriseupdatesample]                               | Updates an existing Redis Enterprise cluster x-ms-original-file: specification/redisenterprise/resource-manager/Microsoft.Cache/RedisEnterprise/stable/2025-07-01/examples/RedisEnterpriseUpdate.json                                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node accessPolicyAssignmentCreateUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
cross-env REDISENTERPRISE_SUBSCRIPTION_ID="<redisenterprise subscription id>" REDISENTERPRISE_RESOURCE_GROUP="<redisenterprise resource group>" node accessPolicyAssignmentCreateUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accesspolicyassignmentcreateupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/accessPolicyAssignmentCreateUpdateSample.js
[accesspolicyassignmentdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/accessPolicyAssignmentDeleteSample.js
[accesspolicyassignmentgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/accessPolicyAssignmentGetSample.js
[accesspolicyassignmentlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/accessPolicyAssignmentListSample.js
[databasescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesCreateSample.js
[databasesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesDeleteSample.js
[databasesexportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesExportSample.js
[databasesflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesFlushSample.js
[databasesforcelinktoreplicationgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesForceLinkToReplicationGroupSample.js
[databasesforceunlinksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesForceUnlinkSample.js
[databasesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesGetSample.js
[databasesimportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesImportSample.js
[databaseslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesListByClusterSample.js
[databaseslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesListKeysSample.js
[databasesregeneratekeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesRegenerateKeySample.js
[databasesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesUpdateSample.js
[databasesupgradedbredisversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/databasesUpgradeDbRedisVersionSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/operationsListSample.js
[operationsstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/operationsStatusGetSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/privateEndpointConnectionsListSample.js
[privateendpointconnectionsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/privateEndpointConnectionsPutSample.js
[privatelinkresourceslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/privateLinkResourcesListByClusterSample.js
[redisenterprisecreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseCreateSample.js
[redisenterprisedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseDeleteSample.js
[redisenterprisegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseGetSample.js
[redisenterpriselistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseListByResourceGroupSample.js
[redisenterpriselistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseListSample.js
[redisenterpriselistskusforscalingsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseListSkusForScalingSample.js
[redisenterpriseupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/redisenterprise/arm-redisenterprisecache/samples/v4/javascript/redisEnterpriseUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-redisenterprisecache?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/redisenterprise/arm-redisenterprisecache/README.md
